[package]
edition = "2024"
name = "openproject-toggl-import"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots",
] }
tokio = { version = "1.43", features = ["full"] }

anyhow = "1.0.97"
base64 = "0.22"
chrono = { version = "0.4.39", features = ["serde"] }
dialoguer = { version = "0.11.0", default-features = false }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
secrecy = "0.10.3"


[dev-dependencies]
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
] }
tokio = { version = "*", features = ["full"] }
tracing-subscriber = "0.3.18"
